# kg-inference

./: .gitignore  README.md  pyproject.toml
input_examples/: facts_1.md  facts_2.md  schema_description.md
scripts/: extract_knowledge.py  generate_schema.py  run_inference.py
src/: config.py  dependencies.py  knowledge_agent.py  linkml_agent.py  schema_agent.py  tools.py  utils.py
tests/: test_tools.py
