[project]
name = "kg-inference"
version = "0.1.0"
description = ""
authors = [
    {name = "Ivan Lytvynenko",email = "lytvynenko.i.d@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4"
dependencies = [
    "pypdf2 (>=3.0.1,<4.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "duckduckgo-search (>=8.1.1,<9.0.0)",
    "markdownify (>=1.2.0,<2.0.0)",
    "oaklib (>=0.6.23,<0.7.0)",
    "linkml (>=1.9.3,<2.0.0)",
    "linkml-store (>=0.2.11,<0.3.0)",
    "pydantic-ai",
    "setuptools (==66.1.1)",
    "pydantic-settings (>=2.10.1,<3.0.0)",

    # linkml-store dependency: I couldn't use any other version.
    # Also the setup script won't work until you install Rust
    "lightrdf (==0.4.0)",
]


[tool.pyright]
reportUnknownMemberType = "none"
reportUnannotatedClassAttribute = "none"
reportExplicitAny = "none"
reportImplicitStringConcatenation = "none"
reportUnusedCallResult = "none"
reportAny = "hint"
reportMissingTypeStubs = "none"
reportUnusedExpression = "none"


[tool.ruff]
select = ["I001"]


[tool.poetry]
packages = [{include = "src"}]


[tool.poetry.group.dev.dependencies]
basedpyright = "1.31.2"
mlflow = "^3.3.2"
pytest = "^8.4.2"
pytest-asyncio = "^1.1.0"


[tool.pytest.ini_options]
testpaths = ["./tests"]
filterwarnings = [
    "ignore:::.*linkml.generators.common.template:47",
    "ignore:::.*linkml.generators.common.template:86",
    "ignore:::.*linkml.generators.pydanticgen.template:553",
    "ignore:::.*pydantic._internal._config:323",
    "ignore:::.*sssom_schema.datamodel.sssom_schema:20"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
